tests/basic/infer/assert/020.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f20 = assert false

f21 : {v:unit|?}
f21 = assert false
